--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 210, 100%, 95%; /* Light blue background */
     --foreground: 240 10% 3.9%;
 
     --card: 0 0% 100%;
@@ -36,13 +36,13 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 210, 100%, 95%; /* Light blue background for dark mode */
     --foreground: 0 0% 98%;
 
-    --card: 240 10% 3.9%;
+    --card: 0 0% 100%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 240 10% 3.9%;
+    --popover: 0 0% 100%;
     --popover-foreground: 0 0% 98%;
 
     --primary: 0 0% 98%;
@@ -72,7 +72,7 @@
     @apply !scroll-smooth;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-[hsl(var(--background))] text-foreground;
   }
   button {
     @apply active:outline-none;
@@ -85,7 +85,7 @@
   }
 
   .black-gradient {
-    background: linear-gradient(90deg, #161a31 0%, #06091f 100%);
+    background: linear-gradient(90deg, #b3e5fc 0%, #e1f5fe 100%); /* Light blue gradient */
   }
 
   .text-custom-color {
